[gd_scene load_steps=5 format=3 uid="uid://d055puxa3jh8x"]

[ext_resource type="Texture2D" uid="uid://beehqq0r8soe2" path="res://assets/images/tetromino_s.png" id="1_06jwx"]
[ext_resource type="Script" path="res://scenes/tetrominos/tetro_choice_item.gd" id="1_coqgn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kp2v7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rftj"]
bg_color = Color(0, 0, 0, 0.556863)

[node name="tetro_choice_item" type="PanelContainer"]
script = ExtResource("1_coqgn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TetrominoTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Lorem Ipsum Dolor Est"
fit_content = true

[node name="TetrominoIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(85, 50)
layout_mode = 2
texture = ExtResource("1_06jwx")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_kp2v7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_3rftj")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
